# rakhtety

./: .dockerignore  .gitignore  .playwriter-test.js  AGENTS.md  Dockerfile.next  eslint.config.mjs  learning.md  next.config.mjs  package.json  pnpm-lock.yaml  rakhtety-erp-demo.html  tsconfig.json  wrangler.jsonc
.codex/: config.toml  gsd-file-manifest.json
frappe_apps/rakhtety_frappe/: README.md  pyproject.toml
frappe_apps/rakhtety_frappe/rakhtety_frappe/: api.py  constants.py  desk_metadata.test.ts  hooks.py  install.py  modules.txt  patches.txt  services.py
frappe_apps/rakhtety_frappe/rakhtety_frappe/patches/v0_0_1/: create_roles.py  create_v16_desk_metadata.py
frappe_apps/rakhtety_frappe/rakhtety_frappe/public/rakhtety/: desk_rtl.css  desk_sections.js
frappe_apps/rakhtety_frappe/rakhtety_frappe/rakhtety/doctype/rakhtety_client/: rakhtety_client.json  rakhtety_client.py
frappe_apps/rakhtety_frappe/rakhtety_frappe/rakhtety/doctype/rakhtety_document/: rakhtety_document.json  rakhtety_document.py
frappe_apps/rakhtety_frappe/rakhtety_frappe/rakhtety/doctype/rakhtety_employee/: rakhtety_employee.json  rakhtety_employee.py
frappe_apps/rakhtety_frappe/rakhtety_frappe/rakhtety/doctype/rakhtety_financial_event/: rakhtety_financial_event.json  rakhtety_financial_event.py
frappe_apps/rakhtety_frappe/rakhtety_frappe/rakhtety/doctype/rakhtety_workflow/: rakhtety_workflow.json  rakhtety_workflow.py  test_rakhtety_workflow.py
frappe_apps/rakhtety_frappe/rakhtety_frappe/rakhtety/doctype/rakhtety_workflow_step/: rakhtety_workflow_step.json  rakhtety_workflow_step.py
(+783 files in other folders)
