[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rakhtety_frappe"
authors = [
    { name = "Rakhtety", email = "dev@rakhtety.local" }
]
description = "Frappe backend app for Rakhtety permit workflows"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
